# password_manager

./: Cargo.toml  LICENSE.txt  build.rs  readme.md
examples/: key_management_example.rs  test_grpc_connection.rs
src/: base_plugin.rs  db_persistence.rs  example_plugin.rs  key_management_plugin.rs  lib.rs  main.rs  mod.rs  plugin_config.rs
src/key_management/: mod.rs  plugin.rs
src/key_management/models/: key_models.rs  mod.rs
src/key_management/security/: mod.rs  security_module.rs
src/persistence/: db_persistence.rs  file_persistence.rs  mod.rs
src/protos/: plugin.rs  plugin_grpc.rs
