[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
tonic = "0.6.2"
prost = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

[build-dependencies]
tonic-build = "0.6.2"

[[example]]
name = "key_management_example"
path = "examples/key_management_example.rs"