[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
tonic = "0.12.2"
prost = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
# 为 sqlx 添加 syn 依赖的特性配置
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
# 添加 syn 依赖并启用所需特性
syn = { version = "1.0", features = ["full", "parsing", "printing", "derive", "proc-macro"] }

[build-dependencies]
tonic-build = "0.12.2"

[[example]]
name = "key_management_example"
path = "examples/key_management_example.rs"